# community-code

./: .env.example  .eslintignore  .eslintignore copy  .eslintrc.json  .firebaserc  .gitignore  .lintstagedrc.yml  .markdownlint.json  .prettierignore  .prettierrc.json  .releaserc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md  app.config.ts  app.vue  bun.lockb  cspell.json  error.vue  eslint.config.mjs  firebase.json  header-links.ts  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  renovate.json  tailwind.config.ts  tsconfig.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml  new_guide_request.yml
.github/workflows/: check-pr-title.yaml  checks.yaml  deploy-preview.yml  deploy-prod.yml  (+5 more)
.husky/: commit-msg  pre-commit
assets/: zksync-icons.ts
code/zk-game/backend/api/: Cargo.toml
code/zk-game/backend/api/src/: main.rs
code/zk-game/frontend/web_game/: Cargo.toml
code/zk-game/frontend/web_game/src/: lib.rs
components/: AppHeader.vue  IconOrbit.vue  InlineVideo.vue  TestAction.vue
composables/: useCategory.ts
content/: _zksync.json  index.yml
cspell-config/: cspell-blockchain.txt  cspell-misc.txt  cspell-zksync.txt
layouts/: tutorials.vue
pages/: index.vue
public/: main.css
tests/: custom-zk-chain.spec.ts  daily-spend-limit.spec.ts  erc20-paymaster.spec.ts  frontend-paymaster.spec.ts  how-to-test-contracts.spec.ts  native-aa-multisig.spec.ts  signing-txns-with-webauthn.spec.ts  wagmi.spec.ts  zk-game.spec.ts
(+460 files in other folders)
