[package]
name = "api"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
sp1-sdk = "4.0.0-rc.3"
hex = "0.4.3"
uuid = { version = "1.11.0", features = ["v4"] }
rocket_ws = { version ="0.1.1" }
alloy-sol-types = { workspace = true }
game-lib = { path = "../../game_lib" }
