[package]
name = "web-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }
serde-wasm-bindgen = "0.6"
game-lib = { path = "../../game_lib" }
